--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": false,
-    "removeComments": true
+    "removeComments": true,
+    "lib": [
+      "es2015"
+    ]
   }
 }
