--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/devlee/ts-node-lessons#readme",
   "devDependencies": {
     "@types/koa": "^2.0.39",
+    "@types/koa-compress": "^2.0.6",
     "@types/node": "^8.0.15",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.2",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "koa": "^2.3.0",
+    "koa-compress": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
