--- a/src/lesson3/webpack/tsconfig.server.json
+++ b/src/lesson3/webpack/tsconfig.server.json
@@ -12,7 +12,8 @@
     ]
   },
   "include": [
-    "../../../src/lesson3/@types/*",
-    "../../../src/lesson3/client/**/*"
+    "../@types/*",
+    "../client/**/*",
+    "../server/**.*"
   ]
 }
