--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "awesome-typescript-loader": "^3.2.2",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "isomorphic-style-loader": "^3.0.0",
     "nodemon": "^1.11.0",
     "postcss-cssnext": "^3.0.2",
@@ -45,6 +46,7 @@
     "tslint": "^5.6.0",
     "tslint-react": "^3.2.0",
     "typescript": "^2.4.2",
+    "url-loader": "^0.5.9",
     "webpack": "^2.7.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-node-externals": "^1.6.0"
