--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/extract-text-webpack-plugin": "^2.1.0",
     "@types/koa": "^2.0.39",
     "@types/koa-compress": "^2.0.6",
+    "@types/lodash": "^4.14.74",
     "@types/node": "^8.0.15",
+    "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.2",
     "@types/webpack": "^3.0.7",
@@ -54,6 +56,8 @@
   "dependencies": {
     "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
