--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.2",
+    "@types/resolve": "0.0.4",
     "@types/webpack": "^3.0.7",
     "@types/webpack-dev-middleware": "^1.9.2",
     "awesome-typescript-loader": "^3.2.2",
@@ -60,6 +61,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "resolve": "^1.4.0"
   }
 }
