--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "tsc": "tsc -w -p tsconfig.json",
     "l1": "nodemon ./src/lesson1/index.js",
     "l2": "nodemon ./src/lesson2/index.js",
-    "l3": "nodemon ./src/lesson3/server/index.js",
+    "l3": "nodemon ./dist/lesson3/server/index.js",
     "b3": "webpack --config ./src/lesson3/webpack/webpack.client.config.js",
     "b3s": "webpack --config ./src/lesson3/webpack/webpack.server.config.js",
     "l4": "nodemon ./bundle/lesson3/server/server-bundle.js",
@@ -33,31 +33,38 @@
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.2",
+    "@types/react-hot-loader": "^3.0.4",
     "@types/resolve": "0.0.4",
     "@types/webpack": "^3.0.7",
     "@types/webpack-dev-middleware": "^1.9.2",
+    "@types/webpack-hot-middleware": "^2.16.0",
     "awesome-typescript-loader": "^3.2.2",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "isomorphic-style-loader": "^3.0.0",
+    "json-loader": "^0.5.7",
     "nodemon": "^1.11.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-nested": "^2.1.1",
+    "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
     "tslint": "^5.6.0",
     "tslint-react": "^3.2.0",
     "typescript": "^2.4.2",
     "url-loader": "^0.5.9",
-    "webpack": "^2.7.0",
+    "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
+    "koa-favicon": "^2.0.0",
+    "koa-router": "^7.2.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
