--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "b3": "webpack --config ./src/lesson3/webpack/webpack.client.config.js",
     "b3s": "webpack --config ./src/lesson3/webpack/webpack.server.config.js",
     "l4": "nodemon ./bundle/lesson3/server/server-bundle.js",
-    "dev": "npm run l3"
+    "dev": "NODE_ENV=development npm run l3"
   },
   "repository": {
     "type": "git",
