--- a/src/lesson3/webpack/tsconfig.server.json
+++ b/src/lesson3/webpack/tsconfig.server.json
@@ -6,6 +6,7 @@
     "sourceMap": false,
     "removeComments": true,
     "jsx": "react",
+    "experimentalDecorators": true,
     "lib": [
       "es2015",
       "dom"
