--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": false,
     "removeComments": true,
     "jsx": "react",
+    "experimentalDecorators": true,
     "lib": [
       "es2015",
       "dom"
