--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.5",
     "@types/react-hot-loader": "^3.0.4",
+    "@types/react-redux": "^5.0.9",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-redux": "^5.0.8",
     "@types/resolve": "0.0.4",
     "@types/webpack": "^3.0.7",
     "@types/webpack-dev-middleware": "^1.9.2",
@@ -61,6 +64,8 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "bundle-loader": "^0.5.5",
+    "core-decorators": "^0.20.0",
     "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
     "koa-favicon": "^2.0.0",
@@ -69,6 +74,11 @@
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
     "resolve": "^1.4.0"
   }
 }
